fix: turn post tags into links; style: scrollbars and set max height

--- a/src/pages/Post/styles.module.css
+++ b/src/pages/Post/styles.module.css
@@ -133,6 +133,10 @@
   transition: 0.3s;
 }
 
+.tag:hover {
+  background-color: #0e2b5c;
+}
+
 .social_media_wrapper {
   display: flex;
   align-items: center;
